project/Server_HW_baseline/vitis_hls.log
INFO: Applying HLS Y2K22 patch v1.2 for IP revision
INFO: [HLS 200-10] Running '/mnt/pollux/software/xilinx/2020.2/Vitis_HLS/2020.2/bin/unwrapped/lnx64.o/vitis_hls'
INFO: [HLS 200-10] For user 'chihan' on host 'big01.seas.upenn.edu' (Linux_x86_64 version 5.14.21-150500.55.7-default) on Sun Nov 19 22:43:56 EST 2023
INFO: [HLS 200-10] On os "openSUSE Leap 15.5"
INFO: [HLS 200-10] In directory '/mnt/castor/seas_home/c/chihan/chihan/ese532_project/project/Server_HW'
Sourcing Tcl script '/mnt/castor/seas_home/c/chihan/chihan/ese532_project/project/Server_HW/LZW_HW/solution1/csim.tcl'
INFO: [HLS 200-1510] Running: open_project LZW_HW 
INFO: [HLS 200-10] Opening project '/mnt/castor/seas_home/c/chihan/chihan/ese532_project/project/Server_HW/LZW_HW'.
INFO: [HLS 200-1510] Running: set_top LZW_hybrid_hash_HW 
INFO: [HLS 200-1510] Running: add_files Chunk.cpp 
INFO: [HLS 200-10] Adding design file 'Chunk.cpp' to the project
INFO: [HLS 200-1510] Running: add_files Constants.h 
INFO: [HLS 200-10] Adding design file 'Constants.h' to the project
INFO: [HLS 200-1510] Running: add_files Dedup.cpp 
INFO: [HLS 200-10] Adding design file 'Dedup.cpp' to the project
INFO: [HLS 200-1510] Running: add_files LZW_hybrid_hash_HW.cpp 
INFO: [HLS 200-10] Adding design file 'LZW_hybrid_hash_HW.cpp' to the project
INFO: [HLS 200-1510] Running: add_files LittlePrince.txt 
INFO: [HLS 200-10] Adding design file 'LittlePrince.txt' to the project
INFO: [HLS 200-1510] Running: add_files common/Utilities.cpp 
INFO: [HLS 200-10] Adding design file 'common/Utilities.cpp' to the project
INFO: [HLS 200-1510] Running: add_files common/Utilities.h 
INFO: [HLS 200-10] Adding design file 'common/Utilities.h' to the project
INFO: [HLS 200-1510] Running: add_files stopwatch.h 
INFO: [HLS 200-10] Adding design file 'stopwatch.h' to the project
INFO: [HLS 200-1510] Running: add_files test.txt 
INFO: [HLS 200-10] Adding design file 'test.txt' to the project
INFO: [HLS 200-1510] Running: add_files -tb baseline.cpp -cflags -Wno-unknown-pragmas -csimflags -Wno-unknown-pragmas 
INFO: [HLS 200-10] Adding test bench file 'baseline.cpp' to the project
INFO: [HLS 200-1510] Running: open_solution solution1 -flow_target vitis 
INFO: [HLS 200-10] Opening solution '/mnt/castor/seas_home/c/chihan/chihan/ese532_project/project/Server_HW/LZW_HW/solution1'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 6.667ns.
INFO: [HLS 200-10] Setting target device to 'xczu3eg-sbva484-1-i'
INFO: [HLS 200-1505] Using flow_target 'vitis'
Resolution: For help on HLS 200-1505 see www.xilinx.com/cgi-bin/docs/rdoc?v=2020.2;t=hls+guidance;d=200-1505.html
INFO: [HLS 200-1464] Running solution command: config_interface -default_interface=kernel
INFO: [HLS 200-1464] Running solution command: config_interface -m_axi_alignment_byte_size=64
INFO: [HLS 200-1464] Running solution command: config_interface -m_axi_latency=64
INFO: [HLS 200-1464] Running solution command: config_interface -m_axi_max_widen_bitwidth=512
INFO: [HLS 200-1464] Running solution command: config_interface -m_axi_offset=slave
INFO: [HLS 200-1464] Running solution command: config_rtl -register_reset_num=3
INFO: [HLS 200-1510] Running: set_part xczu3eg-sbva484-1-i 
INFO: [HLS 200-1510] Running: create_clock -period 150MHz -name default 
INFO: [HLS 200-1510] Running: config_interface -m_axi_alignment_byte_size 64 -m_axi_latency 64 -m_axi_max_widen_bitwidth 512 -m_axi_offset slave 
INFO: [HLS 200-1510] Running: config_rtl -register_reset_num 3 
INFO: [HLS 200-1510] Running: set_directive_top -name LZW_hybrid_hash_HW LZW_hybrid_hash_HW 
INFO: [HLS 200-1510] Running: csim_design -quiet 
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch GCC as the compiler.
   Compiling ../../../../baseline.cpp in debug mode
../../../../baseline.cpp: In function ‘int main()’:
../../../../baseline.cpp:45:65: error: invalid conversion from ‘const char*’ to ‘unsigned char*’ [-fpermissive]
     int boundary_num = cdc("test.txt", ArrayOfChunks, chunk_size);   //boundary_num should use char?
                                                                 ^
../../../../baseline.cpp:45:65: error: invalid conversion from ‘char**’ to ‘int’ [-fpermissive]
../../../../baseline.cpp:45:65: error: cannot convert ‘uint16_t* {aka short unsigned int*}’ to ‘char**’ for argument ‘3’ to ‘int cdc(unsigned char*, int, char**, uint16_t*)’
make: *** [csim.mk:72: obj/baseline.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
INFO: [HLS 200-111] Finished Command csim_design CPU user time: 1.08 seconds. CPU system time: 0.31 seconds. Elapsed time: 2.17 seconds; current allocated memory: 208.386 MB.
4
    while executing
"source /mnt/castor/seas_home/c/chihan/chihan/ese532_project/project/Server_HW/LZW_HW/solution1/csim.tcl"
    invoked from within
"hls::main /mnt/castor/seas_home/c/chihan/chihan/ese532_project/project/Server_HW/LZW_HW/solution1/csim.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$newargs"
    (procedure "hls_proc" line 16)
    invoked from within
"hls_proc [info nameofexecutable] $argv"
